<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".userInterface.Principal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9e9e9">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@color/rojo"></FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView2"
            android:scrollbars="none"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/topScroll"></LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ayuda_fondo"
                    android:padding="10dp">

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/primerosPasos"
                        android:id="@+id/textView15"
                        android:textSize="23dp"
                        android:textColor="@color/tituloAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/separadorAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/direccionServidor"
                        android:id="@+id/textView16"
                        android:layout_marginTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/elementoAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/direccionServidor1"
                        android:id="@+id/textView17"
                        android:textColor="@color/detalleAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/FQDN"
                        android:id="@+id/textView18"
                        android:layout_marginTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/elementoAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/FQDN1"
                        android:id="@+id/textView19"
                        android:textColor="@color/detalleAyuda" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ayuda_fondo"
                    android:padding="10dp"
                    android:layout_marginTop="10dp">

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/notificaciones"
                        android:id="@+id/textView20"
                        android:textSize="23dp"
                        android:textColor="@color/tituloAyuda" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/separadorAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prioridad"
                        android:id="@+id/textView21"
                        android:layout_marginTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/elementoAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prioridad1"
                        android:id="@+id/textView22"
                        android:textColor="@color/detalleAyuda" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ayuda_fondo"
                    android:padding="10dp"
                    android:layout_marginTop="10dp">

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/eliminacionYPrueba"
                        android:id="@+id/textView23"
                        android:textSize="23dp"
                        android:textColor="@color/tituloAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/separadorAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/eliminacion"
                        android:id="@+id/textView24"
                        android:layout_marginTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/elementoAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/eliminacion1"
                        android:id="@+id/textView25"
                        android:textColor="@color/detalleAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prueba"
                        android:id="@+id/textView26"
                        android:layout_marginTop="10dp"
                        android:textSize="17dp"
                        android:textColor="@color/elementoAyuda" />

                    <com.example.andres.botonpanico.customViews.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/prueba1"
                        android:id="@+id/textView27"
                        android:textColor="@color/detalleAyuda" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/bottomScroll"></LinearLayout>

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/shadow"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="-40dp"
            android:id="@+id/shadow"
            android:visibility="gone"></FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/rojo">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_drawer"
                    android:onClick="abrirCerrarDrawer"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:layout_gravity="center_vertical"
                    android:nestedScrollingEnabled="false" />

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/ayuda"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_vertical"
                    android:textColor="#fff"
                    android:textSize="26dp"
                    android:capitalize="characters"
                    android:layout_marginLeft="15dp" />

            </LinearLayout>
        </RelativeLayout>

    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:background="#2a2a2a"/>

</android.support.v4.widget.DrawerLayout>
