<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".userInterface.Principal">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="#ce3b29"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="-16dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_drawer"
                    android:onClick="abrirCerrarDrawer"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp" />
            </LinearLayout>

            <com.example.andres.botonpanico.customViews.CustomButton
                android:layout_width="280dp"
                android:layout_height="80dp"
                android:text="@string/eliminar"
                android:id="@+id/eliminar"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@drawable/eliminar_text"
                android:textSize="30sp"
                android:background="@drawable/eliminar"
                android:onClick="showPopupEliminar"
                android:typeface="sans"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.example.andres.botonpanico.customViews.CustomButton
                    android:layout_width="180dp"
                    android:layout_height="46dp"
                    android:text="@string/probarConexion"
                    android:id="@+id/probar"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/probar"
                    android:textColor="@drawable/probar_text"
                    android:layout_marginTop="40dp"
                    android:onClick="showPopupProbar"
                    android:typeface="normal"
                    android:layout_marginBottom="20dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.example.andres.botonpanico.customViews.CustomImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/loadingView"
                        android:layout_gravity="center"
                        android:visibility="gone" />
                </FrameLayout>

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/resultadoConexion"
                    android:textColor="#2a2a2a"
                    android:layout_gravity="center_horizontal|top"
                    android:visibility="visible"
                    android:textAlignment="center" />

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/detalleConexion"
                    android:textColor="#2a2a2a"
                    android:layout_gravity="center_horizontal|top"
                    android:visibility="visible"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:baselineAligned="false"
                android:gravity="bottom"
                android:layout_marginBottom="20dp"
                android:visibility="visible">

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/eliminacionFicheros"
                    android:id="@+id/textView2"
                    android:layout_marginTop="30dp"
                    android:textColor="#2a2a2a"
                    android:typeface="normal"
                    android:layout_marginLeft="14dp" />

                <ProgressBar
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:id="@+id/progresoEliminarFicheros"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/progreso"
                    android:max="100"
                    android:progress="100" />

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/sobreescrituraEspacioDisco"
                    android:id="@+id/textView3"
                    android:layout_marginTop="30dp"
                    android:textColor="#2a2a2a"
                    android:typeface="normal"
                    android:layout_marginLeft="14dp" />

                <ProgressBar
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:id="@+id/progresoSobreescribirEspacio"
                    android:progressDrawable="@drawable/progreso"
                    android:max="100"
                    android:indeterminate="false"
                    android:progress="100" />

                <com.example.andres.botonpanico.customViews.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/eliminacionSobreescritura"
                    android:id="@+id/textView4"
                    android:layout_marginTop="30dp"
                    android:textColor="#2a2a2a"
                    android:layout_marginLeft="14dp"
                    android:typeface="normal" />

                <ProgressBar
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:id="@+id/progresoEliminarSobreescritura"
                    android:progressDrawable="@drawable/progreso"
                    android:max="100"
                    android:indeterminate="false"
                    android:progress="100" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:background="#2a2a2a"/>

</android.support.v4.widget.DrawerLayout>
